--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ a:hover {
   background: indianred;
   height: 50px;
   line-height: 50px;
-  box-shadow: 0 -3px 0 #bc3a3a inset;
+  box-shadow: 0 -3px 0;
   z-index: 10;
+  
 }
 
 .wrap {
@@ -79,10 +80,10 @@ a:hover {
 
 /* Mobile menu */
 #menu-icon {
-  display: block;
+  display: inline;
   position: absolute;
-  top: 0;
-  right: 1em;
+  top: 1px;
+  right: 2px;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
@@ -90,6 +91,7 @@ a:hover {
   opacity: 1;
   padding: 0 0.4em;
   z-index: 10;
+  font-size: 50px;
 }
 #menu-icon:hover {
   opacity: 0.85;
@@ -129,7 +131,7 @@ a:hover {
   -o-transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  border-bottom: 1px solid #db8b8b;
+  border-bottom: 1px solid ;
   z-index: 10;
 }
 .navbar .menu li a:hover {
@@ -208,8 +210,8 @@ a:hover {
   width: 60px;
   height: 34px;
   right: 10px;
-  top: 55px;
-  z-index: -1;
+  top: 70px;
+  z-index: 1;
 }
 
 /* Hide default HTML checkbox */
