--- a/style.css
+++ b/style.css
@@ -1,488 +1,435 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
-
-
-@font-face {
-  font-family: myFirstFont;
-  src: url(sansation_light.woff);
-}
-/* Color Palletes */
-/*Just change the color e.g. $red or $green or define you color as you like....*/
-/* Base Styles */
-*, *:before, *:after {
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Roboto+Condensed:wght@700&display=swap');
+/* default css start */
+*{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-  font-size: 100%;
-  font-family: "Nunito", Arial, sans-serif;
-  font-weight: normal;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  background-color: #182438;
   scroll-behavior: smooth;
-  color: white;
+}
+
+.social {
+  font-size: 4rem;
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 25px;
+  border-top: 1px black solid;
+  margin-top: 10%;
+}
+.feel {
+  font-size: 3rem;
+ 
+}
+.icon1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 30px;
+}
+.icon {
+  color: black;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-decoration: none;
+  padding-inline: 6%;
+  text-align: center;
+  animation-duration: 1s;
+  transition: transform .6s;
+}
+.icon:hover {
+  transform: scale(1.5);
+}
+.song {
+  background-color: #444;
+  margin-right: 65px;
+  margin-left: 105px;
+  margin-top: 300px;
+  padding: 15px 15px 15px 15px;
+  border-radius: 10px;
+  font-size: 2rem;
+  line-height: 30px;
 }
 a {
-  color: indianred;
-  opacity: 1;
-  text-decoration: none;
+  color: white;
 }
 a:hover {
-  opacity: 0.85;
-  text-decoration: underline;
+  color: ;
+}
+
+.main{
+  max-height: 100%;
+  margin-top: 15%;
+  margin-left: 65px;
 }
 .header1 {
-    display: flex;
-}
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Staatliches&display=swap');
-.gif {
-    height: auto;
-    width: 50%;
-    right: 1px;
-    border-radius: 10px;
-    position: static;
-    animation-name: gifa;
-    animation-duration: 0.9s;
-}
-.a {
-    width: 45%;
-    height: auto;
-    font-size: 250%;
-    font-family: Staatliches;
-    letter-spacing: 3px;
-    animation-name: wel;
-    animation-duration: 0.9s;
-}
-
-.b {
-    width: 100%;
-    height: auto;
-    font-size: 150%;
-    position: static;
-    display: block;
-}
-.c {
-    display: flex;
-    justify-content: left;
-    font-size: 30px;
-}
-.e {
-  color: indianred;
-  opacity: 1;
-  text-decoration: none;
-}
-.content {
-  text-align: center;
-  margin-top: 2em;
-  font-size: 30px;
-    -webkit-font-smoothing: antialiased;
-}
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
-.img {
-  height: auto;
-    position: relative;
-    right: 5px;
-    border-radius: 8px;
-    background-color: transparent;
-    border: 0.5px solid white;
-    width: 80%;
-    animation-name: im;
-    animation-duration: 0.5s;
-}
-@keyframes im {
-   0% {
-       transform: opacity: 0%;
-   }
-   50% {
-       transform: opacity: 50%;
-   }
-   100% {
-       transform: opacity: 100%;
-   }
-}
-.header4 {
-display: flex;
-}
-.mywork {
-    width: 100%;
-    height: auto;
-}
-.ee {
-    width: 100%;
-    height: auto;
-    justify-content: left;
-}
-.icon {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    right: -75%;
-}
-.icon2 {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    left: 25%;
-}
-.soc {
-    border: 1.3px solid indianred;
-    width: 100%;
-    height: auto;
-    padding: 15px 0px;
-}
-
-/* Navigation Styles */
-/* Header */
-.header {
-    position: fixed;
-  top: 0;
-  width: 100%;
-  width: 100%;
-  background: indianred;
-  height: 50px;
-  line-height: 50px;
-  box-shadow: 0 -3px 0;
-  z-index: 10;
+  text-align: left;
+  font-size: 3rem;
+  margin-left: 50px;
+  line-height: 40px;
   
 }
+.dot {
+  color: #A6D1E6;
+  font-size: 6rem;
+}
+.header2 {
+  max-width: 100%;
+  font-size: 2rem;
+  display: block;
+  justify-content: center;
+  line-height: 40px;
+}
+.text {
+  max-width: 90%;
+  margin: 10px;
+  text-align: left;
+  margin-left: 50px;
+  max-height: 50px;
+  height: 50px;
+  padding: 10px;
+  margin-top: 20px;
+}
+.he1 {
+  margin-bottom: 30px;
+}
+.about {
+  max-width: 100%;
+  font-size: 32px;
+  display: block;
+  justify-content: center;
+  margin-top: 20%;
+  margin-right: 30px;
+  margin-left: 105px;
+  border-bottom: 1px black solid;
+  padding-bottom: 10px;
+}
+.about2 {
+  line-height: 40px;
+}
+.about3 {
+  max-width: 100%;
+  font-size: 32px;
+  display: block;
+  justify-content: center;
+  margin-left: 105px;
+  margin-top: 60px;
+  margin-right: 30px;
+  border-bottom: 1px black solid;
+  padding-bottom: 10px;
+}
+.img {
+  margin-right: 10px;
+  border-radius: 10px;
+  border: #A6D1E6 2px solid;
+}
 
-.wrap {
-  max-width: 960px;
-  /* Changge this with your max-width size */
+body{
+  font-family: PT Sans;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  background: linear-gradient(177.9deg, rgb(58, 62, 88) 3.6%, rgb(119, 127, 148) 105.8%);
+  background-attachment:fixed;
+height:100%;
+  color: #FEFBF6;
+}
+.container {
+  width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
-  z-index: 10;
+  padding: 0 15px;
+}
+.header-area {
+  background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5)),
+  background-position: center center;
+  background-size: cover;
+  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6));
 }
 
-.logo {
-  font-family: inherit;
-  font-size: 1.5em;
-  margin-left: 1em;
-  z-index: 10;
+/* default css end */
+
+
+/* navbar regular css start */
+.navbar-area {
+  background: transparent;
+  max-width: 100%;
 }
-.logo a {
+.site-navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+a.site-logo {
+  font-size: 26px;
+  font-weight: 800;
+  text-transform: uppercase;
   color: #fff;
   text-decoration: none;
-  opacity: 1;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-  z-index: 10;
 }
-.logo a:hover {
-  opacity: 0.85;
-  z-index: 10;
-}
-
-/* Mobile menu */
-#menu-icon {
-  display: inline;
-  position: absolute;
-  top: 1px;
-  right: 2px;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  cursor: pointer;
-  opacity: 1;
-  padding: 0 0.4em;
-  z-index: 10;
-  font-size: 50px;
-}
-#menu-icon:hover {
-  opacity: 0.85;
-  text-decoration: none;
-  border: none;
-  z-index: 10;
-}
-
-.navbar {
-  background-color: indianred;
-  float: none;
-  max-height: 0;
-  overflow: hidden;
-  -moz-transition: max-height 0.4s;
-  -o-transition: max-height 0.4s;
-  -webkit-transition: max-height 0.4s;
-  transition: max-height 0.4s;
-  z-index: 10;
-}
-.navbar .menu {
+.site-navbar ul {
   margin: 0;
   padding: 0;
-  list-style-type: none;
-  z-index: 10;
+  list-style: none;
+  display: flex;
 }
-.navbar .menu li {
-  list-style-type: none;
-  display: block;
-  z-index: 10;
-}
-.navbar .menu li a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  padding: 0 0.8em;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-  border-bottom: 1px solid ;
-  z-index: 10;
-}
-.navbar .menu li a:hover {
-  background-color: #df9797;
-  z-index: 10;
-}
-.navbar .menu li a.active {
-  background-color: #d98383;
-  z-index: 10;
-}
-
-.expand {
-  max-height: 20em;
-  z-index: 10;
-}
-
-@media only screen and (min-width: 768px) {
-  .wrap {
-    padding-left: 1em;
-    padding-right: 1em;
-    z-index: 10;
-  }
-
-  .logo {
-    margin-left: 0;
-    z-index: 10;
-  }
-
-  .logo, .navbar {
-    display: inline-block;
-    z-index: 10;
-  }
-
-  /* Mobile menu icon */
-  #menu-icon {
-    display: none;
-    z-index: 10;
-  }
-
-  .navbar {
-    float: right;
-    max-height: none;
-    z-index: 10;
-  }
-  .navbar .menu {
-    box-shadow: 0 -3px 0 #bc3a3a inset;
-    z-index: 10;
-  }
-  .navbar .menu li {
-    list-style-type: none;
-    display: inline-block;
-    text-align: center;
-    z-index: 10;
-  }
-  .navbar .menu li a {
-    display: block;
-    border-bottom: 0;
-    z-index: 10;
-  }
-  .navbar .menu li a:hover {
-    box-shadow: 0 -3px 0 indianred inset;
-    z-index: 10;
-  }
-  .navbar .menu li a.active {
-    box-shadow: 0 -3px 0 indianred inset;
-    z-index: 10;
-  }
-}
-@media only screen and (max-width: 768px) {
-    .header1 {
-        display: block;
-}
-.dark-mode {
-    background-color: white;
-    color: black;
-}
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Staatliches&display=swap');
-.gif {
-    height: auto;
-    width: 60%;
-    border-radius: 10px;
-    animation-name: gifa;
-    animation-duration: 0.9s;
-}
-.a {
-    width: 100%;
-    height: auto;
-    font-size: 250%;
-    font-family: Staatliches;
-    letter-spacing: 3px;
-    animation-name: wel;
-    animation-duration: 0.9s;
-}
-
-.b {
-    width: 100%;
-    height: auto;
-    font-size: 150%;
-    position: static;
-    display: block;
-}
-.c {
-    display: flex;
-    justify-content: left;
-    font-size: 30px;
-}
-.e {
-  color: indianred;
-  opacity: 1;
-  text-decoration: none;
-}
-.content {
-  text-align: center;
-  margin-top: 2em;
-  font-size: 30px;
-    -webkit-font-smoothing: antialiased;
-}
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
-.img {
-  height: auto;
-    position: relative;
-    right: 5px;
-    border-radius: 8px;
-    background-color: transparent;
-    border: 0.5px solid white;
-    width: 80%;
-    animation-name: im;
-    animation-duration: 0.5s;
-}
-@keyframes im {
-   0% {
-       transform: opacity: 0%;
-   }
-   50% {
-       transform: opacity: 50%;
-   }
-   100% {
-       transform: opacity: 100%;
-   }
-}
-.header4 {
-display: flex;
-}
-.mywork {
-    width: 100%;
-    height: auto;
-}
-.ee {
-    width: 100%;
-    height: auto;
-    justify-content: left;
-}
-}
-.header4 {
-display: flex;
-}
-.mywork {
-    width: 100%;
-    height: auto;
-}
-.ee {
-    width: 100%;
-    height: auto;
-    justify-content: left;
-}
-.icon {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    right: -75%;
-}
-.icon2 {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    left: 25%;
-}
-.soc {
-    border: 1.3px solid indianred;
-    width: 100%;
-    height: auto;
-    padding: 15px 0px;
-}
-}
-.dark-mode {
-    background-color: white;
-    color: black;
-}
-.switch {
-  position: absolute;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-  right: 10px;
-  top: 80px;
-  z-index: 1;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
+.n {
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: white;
-  -webkit-transition: .2s;
-  transition: .2s;
-  justify-content: center;
-  border: 0.5px solid black;
+  width: 100%;
+}
+.site-navbar ul li a {
+  color: #fff;
+  padding: 20px;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.site-navbar ul li a:hover {
+  background: rgba(255,255,255,.1);
+}
+/* navbar regular css end */
+
+
+/* nav-toggler css start */
+.nav-toggler {
+  border: 3px solid #fff;
+  padding: 5px;
+  background-color: transparent;
+  cursor: pointer;
+  height: 39px;
+  display: none;
+}
+.nav-toggler span, 
+.nav-toggler span:before, 
+.nav-toggler span:after {
+  width: 28px;
+  height: 3px;
+  background-color: #fff;
+  display: block;
+  transition: .3s;
+}
+.nav-toggler span:before {
+  content: '';
+  transform: translateY(-9px);
+}
+.nav-toggler span:after {
+  content: '';
+  transform: translateY(6px);
+}
+.nav-toggler.toggler-open span {
+  background-color: transparent;
+}
+.nav-toggler.toggler-open span:before {
+  transform: translateY(0px) rotate(45deg);
+}
+.nav-toggler.toggler-open span:after {
+  transform: translateY(-3px) rotate(-45deg);
+}
+/* nav-toggler css start */
+
+
+/* intro-area css start */
+.intro-area {
+  height: calc(100vh - 61px);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+}
+.intro-area h2 {
+  font-size: 50px;
+  font-weight: 300;
+  line-height: 50px;
+  margin-bottom: 25px;
+}
+.intro-area p {
+  font-size: 18px;
+}
+/* intro-area css end */
+@media screen and (max-width: 1135px) {
+  .social {
+    font-size: 3rem;
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    border-top: 1px black solid;
+  }
+  .feel {
+    font-size: 2rem;
+   
+  }
+  .icon {
+    color: black;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-decoration: none;
+    padding-inline: 5%;
+    text-align: center;
+  }
+
+
+  .song {
+    background-color: #444;
+    margin-right: 65px;
+    margin-left: 105px;
+    margin-top: 70px;
+    padding: 15px 15px 15px 15px;
+    border-radius: 10px;
+    font-size: 1rem;
+  }
+  .header1 {
+    text-align: left;
+    font-size: 1.5rem;
+    margin-left: 45px;
+  }
+  .he1{
+    margin-bottom: 0px;
+  }
+  .dot {
+    color: #A6D1E6;
+  }
+  .header2 {
+    max-width: 100%;
+    font-size: 1.3rem;
+    display: block;
+    justify-content: center;
+  }
+  .text {
+    max-width: 100%;
+    margin: 5px 5px 5px 5px;
+    text-align: left;
+    letter-spacing: 2px;
+    margin-left: 40px;
+  }
+  .about {
+    max-width: 100%;
+    margin: 5px 5px 5px 5px;
+    text-align: left;
+    letter-spacing: 2px;
+    margin-left: 105px;
+    font-size: 1.3rem;
+    margin-top: 30%;
+    border-bottom: 1px black solid;
+    padding-bottom: 10px;
+  }
+  .about3 {
+    max-width: 100%;
+    margin: 5px 5px 5px 5px;
+    text-align: left;
+    letter-spacing: 2px;
+    margin-left: 105px;
+    font-size: 1.3rem;
+    margin-top: 60px;
+    border-bottom: 1px black solid;
+    padding-bottom: 10px;
+  }
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border: 1px solid black;
-}
+/* mobile breakpoint start */
+@media screen and (max-width: 767px) {
 
-input:checked + .slider {
-  background-color: #2196F3;
-}
+  .header2{
+    display: block;
+    font-size: 1rem;
+  }
+  .song {
+    background-color: #444;
+    margin-right: 65px;
+    margin-left: 65px;
+    margin-top: 70px;
+    padding: 15px 15px 15px 15px;
+    border-radius: 10px;
+    font-size: 1rem;
+  }
+  .about {
+    max-width: 100%;
+    margin: 5px 5px 5px 5px;
+    text-align: left;
+    letter-spacing: 2px;
+    margin-left: 65px;
+    font-size: 1rem;
+    margin-top: 30%;
+  }
+  .about3 {
+    max-width: 100%;
+    margin: 5px 5px 5px 5px;
+    text-align: left;
+    letter-spacing: 2px;
+    margin-left: 65px;
+    font-size: 1rem;
+    margin-top: 60px;
+  }
+  .header1{
+    font-size: 1rem;
+  }
+  .text{
+    text-align: left;
+    max-width: 100%;
+    margin: 0;
+    margin-left: 35px;
+  }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
+  .main{
+    margin-left: 15px;
+    margin-right: 10px;
+  }
+  .he1{
+    margin-bottom: 0px;
+  }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  .container {
+    max-width: 720px;
+  }
+  /* navbar css for mobile start */
+  .nav-toggler{
+    display: block;
+  }
+  .site-navbar {
+    min-height: 60px;
+  }
+  .site-navbar ul {
+    position: absolute;
+    width: 100%;
+    height: calc(100vh - 60px);
+    left: 0;
+    top: 60px;
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid #444;
+    background-color: rgba(0,0,0,.75);
+    max-height: 0;
+    overflow: hidden;
+    transition: .3s;
+  }
+  .site-navbar ul li {
+    width: 100%;
+    text-align: center;
+  }
+  .site-navbar ul li a {
+    padding: 25px;
+  }
+  .site-navbar ul li a:hover {
+    background-color: rgba(255,255,255,.1);
+  }
+  .site-navbar ul.open {
+    max-height: 100vh;
+    overflow: visible;
+  }
+  .intro-area h2 {
+    font-size: 36px;
+    margin-bottom: 15px;
+  }  
+  /* navbar css for mobile end */
 }
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
+/* mobile breakpoint end */
